ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ing
  namespace: vote
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: vote.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-svc
            port:
              number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-svc
            port:
              number: 80
